# zadanie_zepolone

finalna_wersja_drona/inc/: Bottom.hh  Complete_drone.hh  Obstacle.hh  Rectangle.hh  Rod.hh  Rotate_Matrix.hh  Scene.hh  Shape.hh  Turbine.hh  Water.hh  cuboid.hh
finalna_wersja_drona/src/: Bottom.cpp  Complete_drone.cpp  Rectangle.cpp  Rod.cpp  Scene.cpp  Turbine.cpp  Water.cpp  cuboid.cpp  main.cpp
proba_finalnej_wersji/inc/: Bottom.hh  Complete_drone.hh  Matrix.hh  Obstacle.hh  Rectangle.hh  Rod.hh  Rotate_Matrix.hh  Scene.hh  Shape.hh  Turbine.hh  Vector.hh  Water.hh  cuboid.hh  gnuplot_link.hh
proba_finalnej_wersji/src/: Bottom.cpp  Complete_drone.cpp  Rectangle.cpp  Rod.cpp  Scene.cpp  Turbine.cpp  Water.cpp  cuboid.cpp  main.cpp
zad1/: #Complex.h#  Complex.cpp  Complex.cpp~  Complex.h  Complex.h~  Database.cpp  Database.h  Expression.cpp  Expression.h  Makefile  Statistics.cpp  Statistics.h  main.cpp  test.out
zad3/: system_of_equations
zad3/inc/: Matrix.hh  Size.hh  SystemOfLinearEquations.hh  (+2 more)
zad4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  system_of_equations  zad4
zad5/: Bottom.cpp  Bottom.hh  CMakeLists.txt  Matrix.hh  Rotate_Matrix.hh  Shape.hh  Vector.hh  Water.cpp  Water.hh  a.out  cuboid.cpp  cuboid.hh  main.cpp
zad5/inc/: Matrix.hh  cuboid.hh
zad5/src/: Complex.cpp  cuboid.cpp  main.cpp
zad5/zadanie5_zajecia/: CMakeLists.txt
zad5/zadanie5_zajecia/inc/: cuboid.hh
zad5/zadanie5_zajecia/src/: main.cpp
zad5_uzupełnione/: Rotate_Matrix.hh  Scene.cpp  Scene.hh  Water.cpp  Water.hh  a.out  cuboid.cpp  cuboid.hh
(+21 files in other folders)
