cmake_minimum_required(VERSION 3.15)
project(zad4)

set(CMAKE_CXX_STANDARD 17)

add_executable(zad4 main.cpp Matrix.hh Vector.hh Size.hh SystemOfLinearEquations.hh  Complex.cpp Complex.h cuboid.cpp cuboid.hh gnuplot_link.cpp gnuplot_link.hh Bottom.hh Shape.hh Water.hh Rotate_Matrix.hh Bottom.cpp Water.cpp Scene.hh Scene.cpp)